--- a/src/main/res/layout/fragment_settings_map.xml
+++ b/src/main/res/layout/fragment_settings_map.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingTop="@dimen/bigfloating_radius">
+    android:paddingTop="@dimen/toolbar_radius">
 
     <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/settingsAutoDarkSwitch"
+        android:id="@+id/settingsMapUseMobileDataSwitch"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/settings_switch_margin"
@@ -15,33 +15,12 @@
         android:layout_marginTop="@dimen/settings_switch_margin"
         android:layout_marginEnd="@dimen/settings_switch_margin"
         android:layout_marginRight="@dimen/settings_switch_margin"
-        android:text="@string/settingsAutoDark"
+        android:text="@string/settingsMapUseMobileData"
         android:textColor="@color/foreground"
         android:textSize="@dimen/settings_label_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:switchPadding="@dimen/settings_switch_padding"
-        app:thumbTint="@color/foreground"
-        app:trackTint="@color/backgroundSunken"
-        app:useMaterialThemeColors="true"
-        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />
-
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/settingsDarkModeSwitch"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/settings_switch_margin"
-        android:layout_marginLeft="@dimen/settings_switch_margin"
-        android:layout_marginTop="@dimen/settings_switch_margin"
-        android:layout_marginEnd="@dimen/settings_switch_margin"
-        android:layout_marginRight="@dimen/settings_switch_margin"
-        android:text="@string/settingsDarkMode"
-        android:textColor="@color/foreground"
-        android:textSize="@dimen/settings_label_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/settingsAutoDarkSwitch"
         app:switchPadding="@dimen/settings_switch_padding"
         app:thumbTint="@color/foreground"
         app:trackTint="@color/backgroundSunken"
