apparently, not everything was compatible with sdk 14 right out of the box, updated some components to use their compat version; fixed some linter errors; removed some unnecessary content

--- a/src/main/res/layout/activity_licenses.xml
+++ b/src/main/res/layout/activity_licenses.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:theme="@style/Theme.Echtzeyt"
-    tools:context=".LicensesActivity">
+    tools:context=".LicensesActivity"
+    tools:ignore="Overdraw">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarLicenses"
